--- a/packages/sdk-react-hooks/package.json
+++ b/packages/sdk-react-hooks/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@repo/ui",
+  "name": "@atm0s-media-sdk/sdk-react-hooks",
   "version": "0.0.0",
-  "private": true,
   "exports": {
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
@@ -12,8 +11,8 @@
     "generate:component": "turbo gen react-component"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@atm0s-media-sdk/eslint-config": "workspace:*",
+    "@atm0s-media-sdk/typescript-config": "workspace:*",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
