--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "@repo/eslint-config",
+  "name": "@atm0s-media-sdk/eslint-config",
   "version": "0.0.0",
   "private": true,
-  "files": [
-    "library.js",
-    "next.js",
-    "react-internal.js"
-  ],
+  "files": ["library.js", "next.js", "react-internal.js"],
   "devDependencies": {
     "@vercel/style-guide": "^5.2.0",
     "eslint-config-turbo": "^1.12.4",
