--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,14 +17,18 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.1.1",
     "@atm0s-media-sdk/eslint-config": "workspace:*",
     "@atm0s-media-sdk/typescript-config": "workspace:*",
+    "@next/eslint-plugin-next": "^14.1.1",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.18",
+    "daisyui": "^4.11.1",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
