--- a/packages/sdk-react-ui/package.json
+++ b/packages/sdk-react-ui/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@atm0s-media-sdk/sdk-core": "workspace:*",
-    "@atm0s-media-sdk/sdk-react-hooks": "workspace:*"
+    "@atm0s-media-sdk/sdk-react-hooks": "workspace:*",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17"
   },
   "devDependencies": {
     "@atm0s-media-sdk/eslint-config": "workspace:*",
     "@atm0s-media-sdk/typescript-config": "workspace:*",
     "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
