--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
+      "env": ["NEXT_PUBLIC_GATEWAYS"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
