--- a/packages/sdk-core/package.json
+++ b/packages/sdk-core/package.json
@@ -13,9 +13,11 @@
     "@turbo/gen": "^1.12.4",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
-    "ts-proto": "^1.174.0",
     "eslint": "^8.57.0",
+    "ts-proto": "^1.174.0",
     "typescript": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "protobufjs": "^7.3.0"
+  }
 }
