--- a/packages/sdk-react-ui/package.json
+++ b/packages/sdk-react-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atm0s-media-sdk/sdk-react-ui",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.1",
   "exports": {
     "./lib": "./src/lib.tsx"
   },
