--- a/packages/sdk-react-hooks/package.json
+++ b/packages/sdk-react-hooks/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@atm0s-media-sdk/sdk-react-hooks",
-  "version": "0.0.0",
+  "name": "@atm0s-media-sdk/react-hooks",
+  "version": "1.0.0-alpha.3",
   "exports": {
     "./lib": "./src/lib.tsx"
   },
@@ -9,7 +9,7 @@
     "generate:component": "turbo gen react-component"
   },
   "dependencies": {
-    "@atm0s-media-sdk/sdk-core": "workspace:*"
+    "@atm0s-media-sdk/core": "workspace:*"
   },
   "devDependencies": {
     "@atm0s-media-sdk/eslint-config": "workspace:*",
