--- a/packages/sdk-core/package.json
+++ b/packages/sdk-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@atm0s-media-sdk/core",
   "version": "1.0.0-alpha.4",
-  "main": "./dist/lib.js",
+  "main": "./index.ts",
   "module": "./dist/lib.mjs",
   "types": "./dist/lib.d.ts",
   "files": [
