--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,6 +3,10 @@ on:
     branches:
       - main
 
+concurrency: 
+  group: "release-${{ github.ref }}"
+  cancel-in-progress: true
+
 permissions:
   contents: write
   pull-requests: write
@@ -22,6 +26,7 @@ jobs:
       - uses: googleapis/release-please-action@v2
         id: release
         with:
+          monorepo-tags: true
           release-type: node
           command: manifest
           token: ${{secrets.GITHUB_TOKEN}}
@@ -32,17 +37,18 @@ jobs:
           echo "${{ toJson(steps.release.outputs) }}"
 
   release-sdk-core:
+    needs: release-please
     if: ${{needs.release-please.outputs.sdk-core--release_created}}
-    runs-on: ubunbtu-latest
+    runs-on: ubuntu-latest
     steps:
-      # The logic below handles the npm publication:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Build Packages
         working-directory: ./packages/sdk-core
         run: |
@@ -53,18 +59,20 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: pnpm publish
+
   release-sdk-react-hooks:
+    needs: release-please
     if: ${{needs.release-please.outputs.sdk-react-hooks--release_created}}
-    runs-on: ubunbtu-latest
+    runs-on: ubuntu-latest
     steps:
-      # The logic below handles the npm publication:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Build Packages
         working-directory: ./packages/sdk-react-hooks
         run: |
@@ -75,18 +83,20 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: pnpm publish
+
   release-sdk-react-ui:
+    needs: release-please
     if: ${{needs.release-please.outputs.sdk-react-ui--release_created}}
-    runs-on: ubunbtu-latest
+    runs-on: ubuntu-latest
     steps:
-      # The logic below handles the npm publication:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Build Packages
         working-directory: ./packages/sdk-react-ui
         run: |
@@ -97,4 +107,3 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: pnpm publish
-  
