--- a/.github/workflows/check-build-ci.yml
+++ b/.github/workflows/check-build-ci.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Install dependencies
       run: pnpm install
 
-    - name: Build core
+    - name: Build sdk-core
       run: pnpm run build
-      working-directory: ./packages/core
+      working-directory: ./packages/sdk-core
 
-    - name: Build hooks
+    - name: Build sdk-react-hooks
       run: pnpm run build
-      working-directory: ./packages/hooks
+      working-directory: ./packages/sdk-react-hooks
 
-    - name: Build ui
+    - name: Build sdk-react-ui
       run: pnpm run build
-      working-directory: ./packages/ui
+      working-directory: ./packages/sdk-react-ui
